Refactor styles | implement theming

--- a/src/components/app/styles.scss
+++ b/src/components/app/styles.scss
@@ -1,4 +1,8 @@
+@import '../../assets/styles/index.scss';
+
 .intro {
-    color: black;
-    font-weight: bold;
+  @include themify($themes) {
+    color: themed('textColor');  
+  }
+  font-weight: bold;
 }
