--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -1,11 +1,11 @@
-@import './themes.scss';
+@import './_themes.scss';
 
-@mixin themify($themes: $themes) {
+@mixin themify($themes) {
   @each $theme, $map in $themes {
-    .theme-#{theme} & {
-      $theme-map: () !global;
+    .theme-#{$theme} & {
+      $theme-map:() !global;
       @each $key, $submap in $map {
-        $value: map-get(map-get($themes, $theme), '#{key}');
+        $value: map-get(map-get($themes, $theme), '#{$key}');
         $theme-map: map-merge($theme-map, ($key: $value)) !global;
       }
       @content;
