--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import './abstracts/functions';
-@import './abstracts/mixins';
-@import './abstracts/themes';
+@import './abstracts/_functions';
+@import './abstracts/_mixins';
+@import './abstracts/_themes';
 @import './layout/global.scss';
