--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -13,3 +13,18 @@
     }
   }
 }
+
+@mixin button() {
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 10px;
+  width: 30%;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 20px;
+  min-width: 70px;
+  height: 70px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
