--- a/src/views/Login/styles.scss
+++ b/src/views/Login/styles.scss
@@ -1,4 +1,4 @@
-@import '../../assets//styles/index.scss';
+@import '../../assets/styles/index.scss';
 
 $login-background-color: #cccc;
 $primary-color: #3c84b6;
@@ -29,12 +29,6 @@ $light-primary: #dff1fe;
     }
     .Login-button {
       text-align: end;
-      .button {
-        box-shadow: $box-shadow;
-        border-radius: 5px;
-        background: $light-primary !important;
-        @include button();
-      }
     }
   }
 }
